@@ -3,6 +3,7 @@
 - libmpg123 API version 26 (see NEWS.libmpg123)
 - Cleanup of symbols for the static library: Only have global symbols that are actually needed, prefix them with INT123_ to avoid conflicts.
 - Added --streamdump to get a copy of the data libmpg123 used.
+- Added --icy-interval and tweaked libmpg123 to make playback of ICY stream dumps possible.
 TODO:
 - Remove compiler directives for alignment and disable associated tests.
   The tests don't work on a wide range of compilers anyway, and newer gccs
